Pre v0.2.0 huge refactor WIP