@@ -1,4 +1,7 @@
-clear
-java -jar rvbbit.jar
+java  --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED -XX:+UseG1GC -XX:MaxGCPauseMillis=200  -jar rvbbit.jar
+
+
+
+
 
 
